   - ofa_idbms_get_provider_from_dossier(): new function.
   - ofo_bat_get_account(): new method.
   - ofo_bat_set_account(): new method.
   - ofo_dossier_get_last_closing_date(): new method.
   - ofo_dossier_set_last_closing_date(): new method.
   - ofo_dossier_get_prev_exe_last_entry(): new method.
   - ofo_dossier_set_prev_exe_last_entry(): new method.
   - ofa_application_get_copyright(): new method.
   - ofa_dossier_treeview_add_row(): removed method.
   - ofa_dossier_store_add_row(): removed method.
   - ofa_dossier_store_reload(): new method.
   - ofa_dossier_treeview_get_treeview(): new method.
   - ofa_exercice_combo_set_selected(): new method.
   - ofa_irenderable_free_dataset(): removed interface method.
   - ofa_irenderable_get_dataset(): removed interface method.
   - ofa_ledger_treeview_get_selection(): new method.
   - ofa_reconciliation_set_account(): new method.
   - ofa_render_page_free_dataset(): new virtual method.
   - ofa_render_page_get_dataset(): new virtual method.
   - ofa_render_page_set_args_valid(): renamed as ofa_render_page_set_args_changed().
   - ofa_settings_get_key_file(): renamed as ofa_settings_get_filename().
   - ofa_settings_get_actual_keyfile(): renamed as ofa_settings_get_keyfile().
   - ofa_settlement_set_account(): new method.
   - src/ui/ofa-import-ex.ui: removed file.
   - ofo_xxx_is_deletable(): check that the dossier is current (todo #856).
   - Review my_utils_init_notes/my_utils_getback_notes (todo #859).
   - Get rid of deprecated ofaIPrintable interface (todo #860).
   - ofaAccountsChart class is renamed to ofaAccountChartBin (todo #844/850).
   - ofaAccountsFrame class is renamed to ofaAccountFrameBin (todo #844/850).
   - ofaAccountsPage class is renamed to ofaAccountPage (todo #844).
   - ofaAccountsBookBin class is renamed to ofaAccountBookBin (todo #844).
   - ofaAccountsBookRender class is renamed to ofaAccountBookRender (todo #844).